--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "clsx": "^1.1.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
@@ -20,9 +21,13 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "autoprefixer": "^10.3.1",
     "babel-loader": "^8.2.2",
+    "postcss": "^8.3.5",
     "storybook-builder-vite": "^0.0.12",
+    "tailwindcss": "^2.2.4",
     "typescript": "^4.3.2",
-    "vite": "^2.4.2"
+    "vite": "^2.4.2",
+    "vite-plugin-svgr": "^0.3.0"
   }
 }
