--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@storybook/addon-essentials": "^6.4.0-alpha.18",
     "@storybook/addon-links": "^6.4.0-alpha.18",
     "@storybook/react": "^6.4.0-alpha.18",
+    "@tailwindcss/forms": "^0.3.3",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
